@@ -1,9 +1,3 @@
-// Temporary workaround for Rails 4.1.2 pending releaase of bootstrap-sass 3.1.2
-//= depend_on_asset "bootstrap/glyphicons-halflings-regular.eot"
-//= depend_on_asset "bootstrap/glyphicons-halflings-regular.svg"
-//= depend_on_asset "bootstrap/glyphicons-halflings-regular.ttf"
-//= depend_on_asset "bootstrap/glyphicons-halflings-regular.woff"
-
 // import the CSS framework
 @import "bootstrap";
 
