@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.14"
+  VERSION = "1.0.15"
 end
